# quant-modeling

./: .env.placeholder  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  main.cpp  package-lock.json  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml
api/: Dockerfile  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
api/app/: auth.py  cache.py  dependencies.py  logging_utils.py  main.py  portfolio_schemas.py  portfolio_storage.py  pricing_service.py  request_context.py  schemas.py
api/app/local_vol/: __init__.py  cleaner.py  cpp_bridge.py  dupire.py  fetcher.py  iv_surface.py
api/app/routers/: auth.py  backtest.py  local_vol_pricing.py  market.py  market_iv_surface.py  market_price_tape.py  market_rates.py  portfolio.py  pricing.py
bindings/python/: CMakeLists.txt
etc/: structure.md  structure.txt  todo.md  todo.txt
include/quantModeling/core/: results.hpp  types.hpp
include/quantModeling/engines/: base.hpp
include/quantModeling/engines/analytic/: asian.hpp  black_scholes.hpp  bonds.hpp  commodity.hpp  digital.hpp  future.hpp  fx.hpp  short_rate.hpp  variance_swap.hpp
include/quantModeling/engines/mc/: asian.hpp  autocall.hpp  barrier.hpp  basket.hpp  black_scholes.hpp  dispersion.hpp  local_vol.hpp  lookback.hpp  mountain.hpp  rainbow.hpp  short_rate.hpp  variance_swap.hpp
include/quantModeling/engines/pde/: european_vanilla.hpp
include/quantModeling/engines/tree/: binomial.hpp  trinomial.hpp
include/quantModeling/instruments/: base.hpp
include/quantModeling/instruments/commodity/: forward.hpp  option.hpp
include/quantModeling/instruments/equity/: asian.hpp  autocall.hpp  barrier.hpp  basket.hpp  digital.hpp  dispersion.hpp  future.hpp  lookback.hpp  mountain.hpp  rainbow.hpp  vanilla.hpp  variance_swap.hpp
include/quantModeling/instruments/fx/: forward.hpp  option.hpp
include/quantModeling/instruments/rates/: bond_option.hpp  capfloor.hpp  caplet.hpp  fixed_rate_bond.hpp  zero_coupon_bond.hpp
include/quantModeling/market/: discount_curve.hpp
include/quantModeling/models/: base.hpp  volatility.hpp
include/quantModeling/models/commodity/: commodity_model.hpp
include/quantModeling/models/equity/: black_scholes.hpp  dupire.hpp  local_vol_model.hpp  multi_asset_bs_model.hpp
include/quantModeling/models/fx/: garman_kohlhagen.hpp
include/quantModeling/models/rates/: cir.hpp  flat_rate.hpp  hull_white.hpp  short_rate_model.hpp  vasicek.hpp
include/quantModeling/pricers/: context.hpp  inputs.hpp  pricer.hpp  registry.hpp
include/quantModeling/pricers/adapters/: bonds.hpp  commodity.hpp  equity_asian.hpp  equity_asian_lv.hpp  equity_autocall.hpp  equity_barrier.hpp  equity_barrier_lv.hpp  equity_basket.hpp  equity_digital.hpp  equity_dispersion.hpp  equity_future.hpp  equity_lookback.hpp  equity_lookback_lv.hpp  equity_mountain.hpp  equity_rainbow.hpp  equity_vanilla.hpp  equity_vanilla_american.hpp  equity_vol_swap.hpp  fx.hpp  rates_short_rate.hpp
include/quantModeling/utils/: greeks.hpp  rng.hpp  stats.hpp
notebooks/: vol_basic.ipynb  vol_surfaces.ipynb
scripts/: build_cmds.sh  build_wheel.sh  make.sh  run_api.sh  test_api.sh
src/: module.cpp
src/engines/: base.cpp
src/engines/analytic/: asian.cpp  black_scholes.cpp  bonds.cpp  commodity.cpp  digital.cpp  future.cpp  fx.cpp  short_rate.cpp  variance_swap.cpp
src/engines/mc/: asian.cpp  autocall.cpp  barrier.cpp  basket.cpp  black_scholes.cpp  dispersion.cpp  local_vol.cpp  lookback.cpp  mountain.cpp  rainbow.cpp  short_rate.cpp  variance_swap.cpp
src/engines/pde/: european_vanilla.cpp
src/engines/tree/: binomial.cpp  trinomial.cpp
src/instruments/commodity/: forward.cpp  option.cpp
src/instruments/equity/: asian.cpp  autocall.cpp  barrier.cpp  basket.cpp  digital.cpp  dispersion.cpp  future.cpp  lookback.cpp  mountain.cpp  rainbow.cpp  variance_swap.cpp
src/instruments/fx/: forward.cpp  option.cpp
src/instruments/rates/: bond_option.cpp  capfloor.cpp  caplet.cpp  fixed_rate_bond.cpp  zero_coupon_bond.cpp
src/market/: discount_curve.cpp
src/models/rates/: cir.cpp  flat_rate.cpp  hull_white.cpp  vasicek.cpp
src/pricers/: registry.cpp
src/pricers/adapters/: bonds.cpp  commodity.cpp  equity_asian.cpp  equity_asian_lv.cpp  equity_autocall.cpp  equity_barrier.cpp  equity_barrier_lv.cpp  equity_basket.cpp  equity_digital.cpp  equity_dispersion.cpp  equity_future.cpp  equity_lookback.cpp  equity_lookback_lv.cpp  equity_mountain.cpp  equity_rainbow.cpp  equity_vanilla.cpp  equity_vanilla_american.cpp  equity_vol_swap.cpp  fx.cpp  rates_short_rate.cpp
src/utils/: greeks.cpp  stats.cpp
tests/: testAsianOption.cpp  testBSAna.cpp  testBSMC.cpp  testBarrier.cpp  testBasket.cpp  testBinomial.cpp  testBonds.cpp  testDigital.cpp  testDiscountCurve.cpp  testFuture.cpp  testLocalVol.cpp  testLookback.cpp  testModels.cpp  testNewProducts.cpp  testPDE.cpp  testRainbow.cpp  testRegistry.cpp  testShortRateModels.cpp  testStructuredProducts.cpp  testTrinomial.cpp  testUtils.cpp
web/: Dockerfile  Dockerfile.prod  entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
web/public/: robots.txt
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.ts
web/src/auth/: AuthContext.tsx  localPortfolios.ts
web/src/components/: ChartHoverCard.tsx  PnlChart.tsx  PortfolioBuilder.tsx
web/src/pages/: About.tsx  Backtest.tsx  Market.tsx  Portfolio.tsx  Price.tsx  Visualize.tsx
web/src/pages/market/: PriceTab.tsx  RatesTab.tsx  VolTab.tsx  types.ts
web/src/pages/portfolio/: AddPositionForm.tsx  PositionDetail.tsx  PositionTable.tsx  RiskPanel.tsx  catalog.ts
web/src/pages/pricing/: BondFields.tsx  CommodityFields.tsx  CommonFields.tsx  ExoticFields.tsx  FXFields.tsx  FutureFields.tsx  ModelSelector.tsx  OptionFields.tsx  ResultsPanel.tsx  StructuredFields.tsx  VolatilityFields.tsx  productRegistry.ts  types.ts  usePricing.ts
web/src/pages/visualize/: LegCard.tsx  MetricsPanel.tsx  (+3 more)
web/src/utils/: chartUtils.ts
